# AI-Study-Assistant

./: .env  README.md  pyproject.toml
backend/: config.py  database.py  debug_chroma.py  debug_db.py  diagnose_db.py  models.py  requirements.txt  run.py  study_assistant.db
backend/chroma_store/: chroma.sqlite3
backend/routes/: __init__.py  chat.py  claims.py  ingest.py  library.py
backend/services/: chat_service.py  claim_service.py  ingest_service.py  vector_store.py
frontend/: app.py  config.py
frontend/static/css/: style.css
frontend/static/js/: main.js
frontend/templates/: base.html  chat.html  upload.html
