[project]
name = "ai-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
 "beautifulsoup4==4.12.3",
 "chromadb==0.5.5",
 "flask==3.0.3",
 "flask-cors==4.0.1",
 "langchain==0.2.15",
 "langchain-chroma==0.1.2",
 "langchain-community==0.2.14",
 "langchain-google-genai==1.0.8",
 "langchain-groq==0.1.9",
 "pypdf==4.3.1",
 "python-dotenv==1.0.1",
 "requests==2.32.3",
 "sqlalchemy==2.0.31",
]
